# Lyra

./: .gitignore  .prettierignore  CLAUDE.md  codecov.yml  eslint.config.js  lint-staged.config.js  package.json  playwright.config.ts  prettier.config.js  tsconfig.scripts.json  turbo.json  vite.config.js  vite.config.ts  vitest.scripts.config.ts
.agents/: skills
.github/workflows/: ci.yml
apps/game/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/layout-editor/: index.html  package.json  tsconfig.json  vite.config.ts
apps/layout-editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/layout-editor/src-tauri/capabilities/: default.json
apps/layout-editor/src-tauri/src/: lib.rs  main.rs
docs/audio_plans/: chapter_1.sound-plan.yaml
docs/plans/: 2026-05-04-detective-investigation.md  2026-05-24-svelte-component-coverage-design.md  2026-06-17-evidence-hotspot-assignment-design.md  2026-06-17-evidence-hotspot-assignment-implementation.md  2026-06-17-local-evidence-collection-design.md  2026-06-17-local-evidence-collection-implementation.md  2026-06-18-evidence-carrier-assignment-design.md  2026-06-18-evidence-carrier-assignment-implementation.md  2026-06-18-investigation-evidence-source-audit-skill-design.md  2026-06-18-investigation-evidence-source-audit-skill-implementation.md
docs/stories_plan/: characters.md  (+1 more)
e2e/: app.spec.ts  investigation-layout.spec.ts
scripts/: compile-scenes.test.ts  compile-scenes.ts  monorepo-layout.test.ts  validate-docs-scenes.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
(+288 files in other folders)
