[package]
name = "lyra-layout-editor"
version = "0.1.0"
description = "Lyra investigation layout editor"
authors = ["you"]
edition = "2021"

[lib]
name = "lyra_layout_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
